tests/fixtures/invalid/aggregate_array_field_path_designator_out_of_bounds.c
struct Point {
    int x;
    int y;
};

struct Segment {
    struct Point points[2];
};

int main(void) {
    struct Segment segment = {.points[2].x = 7};
    return segment.points[0].x;
}
